cursor flickering bug + local font to prevent FOUC

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -27,4 +26,8 @@
     -webkit-text-stroke: 1px #222222;
   }
   
+}
+@font-face {
+  font-family:  'Paytone One';
+  src: url("../public/0nksC9P7MfYHj2oFtYm2ChTtgPs.woff2");
 }
